[gd_scene load_steps=2 format=3 uid="uid://dwgrg7x10l64b"]

[ext_resource type="Script" uid="uid://brj651fpaa7j0" path="res://save_load/save_load.gd" id="1_iyu8g"]

[node name="save_load" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iyu8g")

[node name="save" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Sauvegarder"

[node name="load" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = 23.0
offset_bottom = 54.0
grow_horizontal = 0
grow_vertical = 2
text = "Charger"

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
